# openChess

./: .gitignore  CMakeLists.txt  Makefile  README.md  glad.c  main.cpp  openChess
buffers/: EBO.hpp  VAO.hpp  VBO.hpp
camera/: camera.hpp
glsl/: fragmentShader.glsl  vertexShader.glsl
model/: Model.hpp
old/: Makefile
shaders/: FragShader.hpp  ShaderProgram.hpp  VertShader.hpp
src/: main.cpp  stb_image.cpp
src/camera/: camera.hpp
src/debug/: debug.hpp
src/glsl/: fragmentShader.glsl  fragmentShaderLines.glsl  fragmentShaderModel.glsl  vertexShaderLines.glsl  vertexShaderModel.glsl
src/lighting/: Lighting.hpp
src/model/: Mesh.hpp  Model.hpp  ModelOld.hpp  model.hpp
src/resources/: Chessset.mtl
src/shaders/: FragShader.hpp  ShaderProgram.hpp  VertShader.hpp
